configure_file(liblwgeom.h.in ${CMAKE_CURRENT_SOURCE_DIR}/liblwgeom.h)

set(HEADERS)

add_library(liblwgeom OBJECT
  stringbuffer.c
	measures.c
	measures3d.c
	box2d.c
	ptarray.c
	lwgeom_api.c
	lwgeom.c
	lwpoint.c
	lwline.c
	lwpoly.c
	lwtriangle.c
	lwmpoint.c
	lwmline.c
	lwmpoly.c
	lwcollection.c
	lwcircstring.c
	lwcompound.c
	lwcurvepoly.c
	lwmcurve.c
	lwmsurface.c
	lwpsurface.c
	lwtin.c
	lwout_wkb.c
	lwin_wkb.c
	lwout_wkt.c
	lwin_wkt_parse.c
	lwin_wkt_lex.c
	lwin_wkt.c
	lwutil.c
	lwhomogenize.c
	lwalgorithm.c
	lwsegmentize.c
	lwlinearreferencing.c
	lwprint.c
	vsprintf.c
	g_box.c
	g_serialized.c
	g_util.c
	lwgeodetic.c
	lwtree.c
	libtgeom.c
	lwout_gml.c
	lwout_kml.c
	lwout_geojson.c
	lwout_svg.c
	lwout_x3d.c
	lwgeom_debug.c
	lwgeom_geos.c
	lwgeom_geos_clean.c
	lwgeom_geos_node.c
	lwgeom_geos_split.c
	lwgeom_transform.c
	lwspheroid.c
  ${HEADERS})
